--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "dev": "npm run dev:backend & npm run dev:frontend",
     "build": "npm run build --workspaces",
     "test": "npm run test --workspaces"
+  },
+  "dependencies": {
+    "@nestjs/swagger": "github:nestjs/swagger"
   }
 }
