--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "antd": "^5.27.1",
     "axios": "^1.11.0",
     "cookie-parser": "^1.4.7",
     "js-cookie": "^3.0.5",
