--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "shared/*"
   ],
   "scripts": {
-    "dev:backend": "npm run start:dev --workspace backend",
-    "dev:frontend": "npm run dev --workspace frontend",
-    "dev": "npm run dev:backend & npm run dev:frontend",
+    "dev": "npm run _prepare && concurrently \"npm run dev --workspace backend\" \"npm run dev --workspace frontend\"",
+    "_prepare": "npm run migrate --workspace backend && npm run seed --workspace backend",
     "build": "npm run build --workspaces",
     "test": "npm run test --workspaces"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.0"
   },
   "dependencies": {
     "@nestjs/swagger": "github:nestjs/swagger"
